syntax = "proto3";

option csharp_namespace = "Galaxy.Planets";

package Planets;
import "google/protobuf/empty.proto";
import "Protos/commonModels.proto";

service Exploration { 
  rpc Add (ExplorationModel) returns (CommonModels.ActionReplay);
  rpc GetAll (google.protobuf.Empty) returns (stream ExplorationModel);
  rpc GetById (CommonModels.IdRequest) returns (ExplorationModel);
}

message ExplorationModel {
    string id = 1; 
    string name = 2;
    int32 status = 3;
    string planetId = 4;
    string teamId = 5;
    repeated int32 robotsReports = 6;
}